# sillypaste_cli_api

./: Cargo.toml
src/: lib.rs  sillyrest.rs
src/sillyrest/: post.rs  user.rs
